Fix:- Tags drop-down menu is getting overlapped by another elements.

--- a/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
@@ -763,6 +763,10 @@ body .profiler-graph .recharts-active-dot circle {
   overflow-y: hidden;
 }
 
+.full-height {
+  height: calc(100vh - 110px);
+}
+
 #left-panel {
   grid-area: leftsidebar;
 }
